syntax = "proto3";

option go_package = "pkg/grpc";

package myapp;

service PsqlService {
  rpc SelectData (SelectDataRequest) returns (SelectDataResponse);
  rpc InsertData (InsertDataRequest) returns (InsertDataResponse);
}

message SelectDataRequest {
  int32 id = 1;
}

message SelectDataResponse {
  string name = 1;
  int32 age = 2;
}

message InsertDataRequest {
  string name = 1;
  int32 age = 2;
}

message InsertDataResponse {
  string message = 1;
  bool success = 2;
}